# DarkRepoInjector

cpp/: dllmain.cpp
rust/: Cargo.toml
rust/src/: main.rs  mono_injector.rs
