[package]
name = "DarkRepoInjector"
version = "2.0.0"
edition = "2021"
authors = ["hdunl"]

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json", "__rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.11.0-pre.5"
sysinfo = "0.29"
colored = "2.0"
dirs = "6.0.0"
lazy_static = "1.5.0"
encoding_rs = "0.8.35"
libloading = "0.8.6"
chrono = "0.4.40"

[dependencies.winapi]
version = "0.3.9"
features = [
    "winuser",
    "processthreadsapi",
    "memoryapi",
    "handleapi",
    "synchapi",
    "libloaderapi",
    "winnt",
    "tlhelp32",
    "minwindef",
    "winbase",
    "errhandlingapi",
    "shellapi",
    "psapi",
    "ntdef"
]

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1
panic = "abort"
